// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`humanFormatWorkItem audit formatting > renders concise/normal/full outputs with audit present (snapshots) > concise-with-audit 1`] = `
"Audit formatting test TEST-1
Status: Open · Stage: In Progress | Priority: medium
SortIndex: 100
Risk: —
Effort: —
Assignee: alice
Audit: Ready to close: Yes"
`;

exports[`humanFormatWorkItem audit formatting > renders concise/normal/full outputs with audit present (snapshots) > full-with-audit 1`] = `
"# Audit formatting test

ID       : TEST-1
Status   : Open · Stage: In Progress | Priority: medium
Type     : task
SortIndex: 100
Risk     : —
Effort   : —
Assignee : alice

## Description

A test item for audit formatting

## Stage

in_progress

## Audit

Time: 2026-03-26T20:29:00Z
Author: alice

Ready to close: Yes
Extra details"
`;

exports[`humanFormatWorkItem audit formatting > renders concise/normal/full outputs with audit present (snapshots) > normal-with-audit 1`] = `
"ID:    TEST-1
Title: Audit formatting test
Status: Open · Stage: In Progress | Priority: medium
SortIndex: 100
Risk: —
Effort: —
Assignee: alice
Audit: Ready to close: Yes
Description: A test item for audit formatting"
`;

exports[`humanFormatWorkItem audit formatting > renders concise/normal/full outputs without audit (snapshots) > concise-without-audit 1`] = `
"Audit formatting test TEST-1
Status: Open · Stage: In Progress | Priority: medium
SortIndex: 100
Risk: —
Effort: —
Assignee: alice"
`;

exports[`humanFormatWorkItem audit formatting > renders concise/normal/full outputs without audit (snapshots) > full-without-audit 1`] = `
"# Audit formatting test

ID       : TEST-1
Status   : Open · Stage: In Progress | Priority: medium
Type     : task
SortIndex: 100
Risk     : —
Effort   : —
Assignee : alice

## Description

A test item for audit formatting

## Stage

in_progress"
`;

exports[`humanFormatWorkItem audit formatting > renders concise/normal/full outputs without audit (snapshots) > normal-without-audit 1`] = `
"ID:    TEST-1
Title: Audit formatting test
Status: Open · Stage: In Progress | Priority: medium
SortIndex: 100
Risk: —
Effort: —
Assignee: alice
Description: A test item for audit formatting"
`;
